# hw10_AutonomousBot

src/: README.md
src/model_generation/: dataset.py  eval.py  model.py  train.ipynb
src/model_generation/util/: data_generation  data_split.py  extract_ros_bag.py  merge_dataset.py  plot_data.py  smooth_omega.py
src/self_driving/: package.xml  setup.py
src/self_driving/launch/: steering_inference.launch.xml
src/self_driving/resource/: workflow_good_data_example.webm
src/self_driving/self_driving/: dummy.py  steering_inference_image.py
