<?xml version="1.0"?>
<package format="3">
  <name>self_driving</name>
  <version>0.1.0</version>
  <description>ROS2 node for steering-angle regression inference on TurtleBot3 camera images.</description>
  <maintainer email="you@cmu.edu">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>torch</exec_depend> 
  <exec_depend>torchvision</exec_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

